@@ -36,3 +36,4 @@ Bug fixes
 * stat_summary: should be a little faster
 * theme_bw: corrected justification of axis.text.y
 * trans: bug fixes to logistic transformation
+* order aesthetic should work again
